# Embedded_Linux

./: .gitattributes  README.md
AdminLinux_Task2/: main
AdminLinux_Task2/Na2na2a/: env_vars.txt  readme.md
AdminLinux_Task2/Question1/: 2024-12-02 16-20-10.mkv
AdminLinux_Task2/Question2/: README.md
AdminLinux_Task3/Section_2/: commands.list  filename2  man_wc.txt  readme.md
AdminLinux_Task3/Task_Control_CabsLock/: ctrl_backlight_bright.c  readme.md
AdminLinux_Task3/what is soft link contain?/: readme.md
AdminLinux_Task4/: destroy_sharedmem  destroy_sharedmem.c  read_sharedmem.c  readme.md  sharedmem.c  sharedmem.h  write_sharedmem.c
AdminLinux_Task5/my_printf/: readme.md
AdminLinux_Task5/what_is_virtual_loop_file?/: readme.md
AdminLinux_TaskDay5/section2/: readme.md
EmbeddedLinuxKitchen/05_BuildYourOwnKernel/: readme.md
EmbeddedLinuxKitchen/06_BuildYourOwnInitProcess_BusyBox/: readme.md
EmbeddedLinuxKitchen/07_BuildYourOwnInitProcess_SystemV/: readme.md
LAB1_EmbeddedLinux/Sensors/: main.c  run_project.sh  temp.sh
LAB2_EmbeddedLinux/Battery_and_Temp_Check/: bash.sh
LEC_Crosstoolchain_EmbeddedLinuxKitchen/: readme.md
LEC_TASK3_bootscript_EmbeddedLinuxKitchen/: readme.md
LEC_TASK4_KERNEL_EmbeddedLinuxKitchen/: readme.md
LEC_TASK4_KERNEL_EmbeddedLinuxKitchen/files/: init  init.c
LEC_TASK5_BusyBox_EmbeddedLinuxKitchen/: readme.md
LEC_TASK5_BusyBox_EmbeddedLinuxKitchen/qemu/: readme.md
LEC_TASK7_SystemD_EmbeddedLinuxKitchen/: readme.md
LEC_Task2_Baremetal/: readme.md
Linux_Admin/AdminLinux_Task4/: CMakeLists.txt  read_sharedmem
(+65 files in other folders)
